--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Recipes</h1>
-    <a href="recipes/hamburger.html">Hamburger</a>
+    <ul> 
+        <li><a href="recipes/hamburger.html">Hamburger</a></li>
+    </ul>
+    
 </body>
 </html>
