Wrote Grilled Cheese

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hamburger</h1>
     <a href="../index.html">Home</a>
-    <img src="krabbyPatty.jpeg">
+    <img src="krabbyPatty.jpeg" height = 500 width = 500>
     <h3>Description</h3>
     <p>A hamburger, or simply a burger,
          is a dish consisting of fillings—usually a patty of ground meat,
