--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Recipes</h1>
     <ul> 
         <li><a href="recipes/hamburger.html">Hamburger</a></li>
+        <li><a href="recipes/grilledCheese.html">Grilled Cheese</a></li>
     </ul>
     
 </body>
