--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul> 
         <li><a href="recipes/hamburger.html">Hamburger</a></li>
         <li><a href="recipes/grilledCheese.html">Grilled Cheese</a></li>
+        <li><a href="recipes/freezerChickenNuggets.html">Freezer Chicken Nuggets</a></li>
     </ul>
     
 </body>
