--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Recipes</h1>
+    <h4>Written by Nicholas Muttoo</h4>
     <ul> 
         <li><a href="recipes/hamburger.html">Hamburger</a></li>
         <li><a href="recipes/grilledCheese.html">Grilled Cheese</a></li>
