--- a/recipes/freezerChickenNuggets.html
+++ b/recipes/freezerChickenNuggets.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes | Freezer Chicken Nuggets</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Freezer Chicken Nuggets</h1>
